# werewolf-discord-v2

./: .gitignore  Cargo.toml  README.md
data/: data.json
src/: main.rs
src/bot/: handler.rs  mod.rs
src/client/: handler.rs
src/commands/: create.rs  guide.rs  join.rs  leave.rs  mod.rs  ping.rs  role.rs  start.rs  status.rs
src/constants/: mod.rs
src/db/: mod.rs  models.rs
src/game/: canvas.rs  faction.rs  helper.rs  mod.rs  room.rs  state.rs
src/game/phases/: check_end.rs  day.rs  mod.rs  night.rs  solve.rs  vote.rs
src/roles/: alpha_werewolf.rs  bodyguard.rs  cursed.rs  dead.rs  detective.rs  elder.rs  fool.rs  fox_spirit.rs  gunner.rs  kitten_wolf.rs  loudmouth.rs  lycan.rs  maid.rs  medium.rs  mod.rs  puppeteer.rs  seer.rs  stalker.rs  villager.rs  voodoo.rs  werewolf.rs  witch.rs  wolf_seer.rs  wolffluence.rs
src/types/: data.rs  faction.rs  mod.rs  player.rs  role.rs  types.rs
src/utils/: embed.rs  mod.rs  response.rs  role.rs  role_parser.rs
