[package]
name = "werewolf-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }

poise = "0.6.1"

tokio = { version = "1", features = ["full"] }

mongodb = "2.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "1.0"

image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

futures = "0.3"
async-trait = "0.1"

chrono = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3"

dotenv = "0.15"

rand = "0.8"

reqwest = { version = "0.11", features = ["json", "blocking"] }
bytes = "1.0"

[profile.release]
opt-level = 3
lto = true
